# AoC

./: LICENSE  README.md
aoc_2022/: README.md
aoc_2022/day6p2/: BUILD  CMakeLists.txt  aoc.dot  compile_commands.json
aoc_2022/day6p2/inc/: AocUtils.h  Utilities.h
aoc_2022/day6p2/src/: AocUtils.cpp  Utilities.cpp  main.cpp
aoc_2022/day6p2/unittests/: test_aoc2022.cpp  test_aocutils.cpp  test_utils.cpp
aoc_2022/rust_impl/day7p2/src/: main.rs
aoc_2023/day1.1/: Cargo.toml
aoc_2023/day1.1/src/: main.rs
aoc_2023/day1.2/: Cargo.toml
aoc_2023/day1.2/src/: main.rs
aoc_2023/day2.1/: Cargo.toml
aoc_2023/day2.1/src/: main.rs
aoc_2023/day2.2/src/: main.rs
aoc_2023/day3.1/: Cargo.toml
aoc_2023/day3.1/src/: main.rs
aoc_2023/day3.2/src/: main.rs
aoc_2023/day4.1/: Cargo.toml
aoc_2023/day4.1/src/: main.rs
aoc_2023/day5.1/src/: main.rs
aoc_2023/day5p1/: Cargo.toml
aoc_2023/day5p1/src/: main.rs
aoc_2023/day5p2/: Cargo.toml
aoc_2023/day5p2/src/: main.rs
aoc_2024/day1p1/: final.txt
aoc_2024/day1p1/src/: main.rs
aoc_2024/day1p2/: Cargo.toml
aoc_2024/day1p2/src/: main.rs
aoc_2024/day2p1/: Cargo.toml
aoc_2024/day2p1/src/: main.rs
aoc_2024/day2p2/src/: main.rs
aoc_2024/day3p1/src/: main.rs
aoc_2024/day3p2/src/: main.rs
aoc_2024/day4p1/: Cargo.toml
aoc_2024/day4p1/src/: main.rs
aoc_2024/day4p2/src/: main.rs
aoc_2024/day5p1/: Cargo.toml
aoc_2024/day5p1/src/: main.rs
aoc_2024/day5p2/src/: main.rs
