[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"
authors = ["emailstorbala@gmail.com"]

[profile.dev]
opt-level = 0
debug = false
panic = 'unwind'

[profile.release]
strip = true
opt-level = "s"
debug = false
panic = 'unwind'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
regex = "1.10.2"
sscanf = "0.4.1"
