[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"
authors = ["emailstorbala@gmail.com"]

[profile.dev]
opt-level = 0
debug = false
panic = 'unwind'

[profile.release]
strip = true
panic = 'unwind'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array_tool = "1.0.3"
clap = { version = "4.4.11", features = ["derive"] }
mpsc = "0.2.3"
sscanf = "0.4.1"
threadpool = "1.8.1"
